swagger notice
