# models/user.js
@@ -43,7 +43,7 @@ const userSchema = new Schema(
       match: [phoneRegexp, "Please enter a valid phone number"],
     },
 
-    birthDate: {
+    date: {
       type: Date,
       default: null,
     },
@@ -93,7 +93,7 @@ const joiLoginSchema = Joi.object({
 
 const joiEditInfoSchema = Joi.object({
   email: Joi.string().min(12).max(50).pattern(emailRegexp),
-  birthDay: Joi.date(),
+  date: Joi.date(),
   name: Joi.string().pattern(nameRegexp),
   city: Joi.string(),
   phone: Joi.string().pattern(phoneRegexp),
