# routes/api/notices.js
@@ -4,15 +4,17 @@ const { joiAddNoticeSchema } = require("../../models/notices");
 const { noticesCtrls: ctrl } = require("../../controllers");
 
 const router = express.Router();
-router.get("/search/:search", ctrlWrapper(ctrl.getByKeyword));
+// router.get("/search/:search", ctrlWrapper(ctrl.getByKeyword));
 // //////////
 router.get("/category/:category", ctrlWrapper(ctrl.getByCategory)); // OK
 
 router.get("/id/:id", ctrlWrapper(ctrl.getById));
 
-router.post("/favorite/:id", auth, ctrlWrapper(ctrl.addToFavorites));
+router.delete("/id/:id", auth, ctrlWrapper(ctrl.removeById));
 
 router.get("/favorite", auth, ctrlWrapper(ctrl.getFavorite)); // OK
+
+router.post("/favorite/:id", auth, ctrlWrapper(ctrl.addToFavorites));
 
 router.delete("/favorite/:id", auth, ctrlWrapper(ctrl.removeFromFavorites));
 
@@ -25,7 +27,5 @@ router.post(
 ); // OK
 
 router.get("/", auth, ctrlWrapper(ctrl.getByUser)); // OK
-
-router.delete("/id/:id", auth, ctrlWrapper(ctrl.removeById));
 
 module.exports = router;
